--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.124.0",
+    "flake8>=7.3.0",
+    "httpx>=0.28.1",
+    "pydantic>=2.12.5",
+    "uvicorn>=0.38.0",
 ]
