--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: api-gateway-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: api-gateway
@@ -36,6 +36,18 @@ spec:
                 configMapKeyRef:
                   name: text-processor-config
                   key: REQUEST_TIMEOUT
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 3
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
