--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: worker-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: worker-service
@@ -26,6 +26,18 @@ spec:
                 configMapKeyRef:
                   name: text-processor-config
                   key: LOG_LEVEL
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 3
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
