--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "flake8>=7.3.0",
     "httpx>=0.28.1",
     "pydantic>=2.12.5",
+    "redis>=7.1.0",
     "uvicorn>=0.38.0",
 ]
