--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: api-gateway
           image: text-processor:dev
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Never
           command: ["uv"]
           args: ["run", "uvicorn", "app.api_gateway:app", "--host", "0.0.0.0", "--port", "8000"]
           ports:
